# ai-assist-example

./: .env.example  .gitignore  .mcp.json  .mise.toml  .npmrc  AGENTS.md  CLAUDE.md  README.md  biome.json  commitlint.config.js  package.json  pnpm-lock.yaml
.cursor/: mcp.json
.cursor/rules/: backend-patterns.mdc  code-quality.mdc  frontend-patterns.mdc  project-structure.mdc  testing-patterns.mdc  vacds-design-system.mdc
.github/workflows/: app-ci-cd.yml  infra-app-config.yml  infra-app.yml  infra-ecr-repository.yml
.husky/: pre-push
.windsurf/rules/: backend-patterns.md  code-quality.md  frontend-patterns.md  project-structure.md  testing-patterns.md
apps/api/: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
apps/api/app/: __init__.py  config.py  main.py
apps/api/app/agents/: __init__.py  context.py  medication_enrichment.py  medication_grouping.py  medications-enrichment.py  medications.py  orchestrator.py  tools.py
apps/api/app/dependencies/: __init__.py  auth.py  context.py
apps/api/app/models/: __init__.py  auth.py  chat.py  health.py  summaries.py  summary.py  user.py
apps/api/app/prompts/: enrich-medication-problem-grouping.md  medication-problem-grouping.md  medication_enrichment.md  medication_grouping.md
apps/api/app/routers/: chat.py  health.py  summaries.py  summary.py  user.py
apps/api/app/services/: __init__.py  azure_openai.py  azure_rate_limiter.py  chat.py  jwt_auth.py  mcp_client.py  sso_client.py  summaries.py  summary.py  tracing.py  vista_tools.py
apps/api/tests/: test_chat.py  test_context_duz_extraction.py  test_jwt_duz_extraction.py  test_patient_context.py  test_user.py
apps/web/: .env.example  .gitignore  .npmrc  .npmrc.example  Dockerfile  biome.jsonc  default.conf  index.html  package.json  vite.config.ts  vitest.config.ts
apps/web/src/: app.tsx  (+4 more)
docs/: code-quality.md  development.md  initiative-brief.md  langsmith-tracing.md  quick-start.md  vacds-guide.md
scripts/: check-versions.js
(+72 files in other folders)
